objects/WRF_Task__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>WRF__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SalesForce_ID__c</fullName>
        <formula>WRF__r.Account.Salesforce_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SalesForce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&quot;Completed&quot;),  Hours_Total__c , (Hours_Awaiting_Info_Current__c + Hours_Awaiting_Info__c +  Hours_Final_Review__c +  Hours_Final_Review_Current__c  +  Hours_In_Progress__c +  Hours_In_Progress_Current__c +  Hours_Not_Started__c +  Hours_Not_Started_Current__c +  Hours_Team_Review__c +  Hours_Team_Review_Current__c +  Hours_Under_Review__c  +  Hours_Under_Review_Current__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Name__c</fullName>
        <formula>Assigned_To__r.FirstName &amp; &quot; &quot; &amp;  Assigned_To__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WRF_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me__c</fullName>
        <formula>IF( Assigned_To__c  =  $User.Id , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Me</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Audits</fullName>
                </value>
                <value>
                    <fullName>B2B eContent</fullName>
                </value>
                <value>
                    <fullName>Bid Writing</fullName>
                </value>
                <value>
                    <fullName>BSD Pricing</fullName>
                </value>
                <value>
                    <fullName>CBFS</fullName>
                </value>
                <value>
                    <fullName>Contract Development</fullName>
                </value>
                <value>
                    <fullName>Cross Reference</fullName>
                </value>
                <value>
                    <fullName>Diversity Solutions Ops</fullName>
                </value>
                <value>
                    <fullName>Field Contracts</fullName>
                </value>
                <value>
                    <fullName>GT Contract Development</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>MPS</fullName>
                </value>
                <value>
                    <fullName>MPS Assessment</fullName>
                </value>
                <value>
                    <fullName>MPS Pricing</fullName>
                </value>
                <value>
                    <fullName>Pricing Acquisition</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Support</fullName>
                </value>
                <value>
                    <fullName>Transition Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Awaiting_Action_Date__c</fullName>
        <label>Awaiting Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bid_Writer__c</fullName>
        <formula>IF(ISPICKVAL(Disposition_Code__c, &quot;Bid Writing&quot;), Assigned_To__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Writer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Requirements__c</fullName>
        <formula>WRF__r.Customer_Core_Price_Changes__r.Customer_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Requirements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>WRF_Request__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <formula>CASE(TEXT(Status__c), &quot;Not Started&quot;, 0, &quot;Under Review&quot;, 10,
&quot;Team Review&quot;, 25, &quot;In Progress&quot;,50,
&quot;Final Review&quot;, 75, &quot;Completed&quot;, 100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compliance_Legal__c</fullName>
        <formula>IF(ISPICKVAL(Disposition_Code__c, &quot;Development&quot;), Assigned_To__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance/Legal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_Task_Sequence__c</fullName>
        <label>Control Task Sequence</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Response__c</fullName>
        <formula>text(WRF__r.Customer_Core_Price_Changes__r.Customer_Response__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition_Code__c</fullName>
        <label>Disposition Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd Party Catalog</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Bids</fullName>
                </value>
                <value>
                    <fullName>Bid Writing</fullName>
                </value>
                <value>
                    <fullName>BSA</fullName>
                </value>
                <value>
                    <fullName>BSD Pricing</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>CBFS</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>Cross Reference</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Deviated Cost</fullName>
                </value>
                <value>
                    <fullName>Deviated Cost Core Build</fullName>
                </value>
                <value>
                    <fullName>Diversity</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>Hosted Catalog</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>K-12 Growth</fullName>
                </value>
                <value>
                    <fullName>Leader/Follower SKU Change</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Lifecycle</fullName>
                </value>
                <value>
                    <fullName>Master Core Builds</fullName>
                </value>
                <value>
                    <fullName>MPS</fullName>
                </value>
                <value>
                    <fullName>MPS Assessment</fullName>
                </value>
                <value>
                    <fullName>MPS Implementation</fullName>
                </value>
                <value>
                    <fullName>MPS Pricing</fullName>
                </value>
                <value>
                    <fullName>MPS Product</fullName>
                </value>
                <value>
                    <fullName>MPS Service Delivery</fullName>
                </value>
                <value>
                    <fullName>OD N Bid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Sent_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>File Sent for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Review_Date__c</fullName>
        <label>Final Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Historical_PM__c</fullName>
        <label>Historical PM %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hours_Awaiting_Info_Current__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours Awaiting Action Current</description>
        <label># of Hours Awaiting Action Current</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Awaiting_Info__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours Awaiting Action</description>
        <label># of Hours Awaiting Action</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Final_Review_Current__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours Final Review Current</description>
        <label># of Hours Final Review Current</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Final_Review__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours Final Review</description>
        <label># of Hours Final Review</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_In_Progress_Current__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours In Progress Current</description>
        <label># of Hours In Progress Current</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_In_Progress__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours In Progress</description>
        <label># of Hours In Progress</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Not_Started_Current__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours Not Started Current</description>
        <label># of Hours Not Started Current</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Not_Started__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours Not Started</description>
        <label># of Hours Not Started</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Team_Review_Current__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours Team Review Current</description>
        <label># of Hours Team Review Current</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Team_Review__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours Team Review</description>
        <label># of Hours Team Review</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours Total</description>
        <label># of Hours Total</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Under_Review_Current__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours Under Review Current</description>
        <label># of Hours Under Review Current</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Under_Review__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of Hours Under Review</description>
        <label># of Hours Under Review</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date__c</fullName>
        <label>In Progress Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Pricing_Completed__c</fullName>
        <label>Initial Pricing Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>Assigned_To__r.Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Action_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Group__c</fullName>
        <label>Notification Group</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>WRF__r.WRF_Oppty_Amount__c</formula>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_WRF_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent WRF Task</description>
        <inlineHelpText>Parent WRF Task</inlineHelpText>
        <label>Parent WRF Task</label>
        <referenceTo>WRF_Task__c</referenceTo>
        <relationshipLabel>WRF Sub Tasks</relationshipLabel>
        <relationshipName>WRF_SubTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_Amount__c</fullName>
        <formula>IF(Opportunity_Amount__c &gt; 0, Opportunity_Amount__c, IF((ISNULL(WRF__r.Dup_Potential_Amount__c) || ISBLANK(WRF__r.Dup_Potential_Amount__c) || (WRF__r.Dup_Potential_Amount__c == 0) ), WRF__r.Account.Potential_Amount__c, WRF__r.Dup_Potential_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previously_Assigned_Date__c</fullName>
        <label>Previously Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previously_Assigned_To_B__c</fullName>
        <label>Previously Assigned To 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previously_Assigned_To__c</fullName>
        <label>Previously Assigned To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previously_Assigned_to_Date_2__c</fullName>
        <label>Previously Assigned Date 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pricing_Analyst__c</fullName>
        <formula>IF((ISPICKVAL(Disposition_Code__c, &quot;Bids&quot;)||ISPICKVAL(Disposition_Code__c, &quot;Public/GPO&quot;)||ISPICKVAL(Disposition_Code__c, &quot;Remediation&quot;)), Assigned_To__c, null)</formula>
        <label>Pricing Analyst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_Gross_IMU__c</fullName>
        <label>Projected Gross IMU %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Pocket_Margin__c</fullName>
        <label>Projected PM %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Sales__c</fullName>
        <label>Projected Annual Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Send_Group_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Group Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Date_Time_Assigned__c</fullName>
        <label>Status Date/Time Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Awaiting Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Salesforce_ID__c</fullName>
        <formula>CASESAFEID(WRF__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Ticket_ID__c</fullName>
        <formula>CASESAFEID(WRF__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Age_in_Days__c</fullName>
        <formula>IF((ISBLANK(Age__c) || ISNULL(Age__c)),  0, (Age__c/24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Age in Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Sequence__c</fullName>
        <label>Task Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Subtype__c</fullName>
        <label>Task Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Task_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Partner Inquiry</fullName>
                </value>
                <value>
                    <fullName>Partner Setup/Maintenance</fullName>
                </value>
                <value>
                    <fullName>Customer Setup/Assignment</fullName>
                </value>
                <value>
                    <fullName>Customer Issues</fullName>
                </value>
                <value>
                    <fullName>Customer Pricing</fullName>
                </value>
                <value>
                    <fullName>Customer Agreements</fullName>
                </value>
                <value>
                    <fullName>Partner Certifications</fullName>
                </value>
                <value>
                    <fullName>Partner/Customer Tax Exemption</fullName>
                </value>
                <value>
                    <fullName>Partner Catalog</fullName>
                </value>
                <value>
                    <fullName>Partner Compensation/AR</fullName>
                </value>
                <value>
                    <fullName>Partner Question/Information Request</fullName>
                </value>
                <value>
                    <fullName>Tier 2 Question/Information Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>WRF Task Type</description>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Disposition_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Set Up</fullName>
                </value>
                <value>
                    <fullName>Agreement/Amendment</fullName>
                </value>
                <value>
                    <fullName>AVF</fullName>
                </value>
                <value>
                    <fullName>AVF/Labels</fullName>
                </value>
                <value>
                    <fullName>Cross Referencing</fullName>
                </value>
                <value>
                    <fullName>Cross Referencing Revisit</fullName>
                </value>
                <value>
                    <fullName>Data Pull</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>GALC Billing</fullName>
                </value>
                <value>
                    <fullName>Hardware Order</fullName>
                </value>
                <value>
                    <fullName>MARS Upload</fullName>
                </value>
                <value>
                    <fullName>Pricing/CPM</fullName>
                </value>
                <value>
                    <fullName>Pricing/CPM Revisit</fullName>
                </value>
                <value>
                    <fullName>Pricing Implementation</fullName>
                </value>
                <value>
                    <fullName>Qualify Account</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFP Revisit</fullName>
                </value>
                <value>
                    <fullName>RFP to Agreement</fullName>
                </value>
                <value>
                    <fullName>Service Training</fullName>
                </value>
                <value>
                    <fullName>Software Install/DCA</fullName>
                </value>
                <value>
                    <fullName>Special Task</fullName>
                </value>
                <value>
                    <fullName>Unmanaged Devices</fullName>
                </value>
                <value>
                    <fullName>Vendor Special Pricing</fullName>
                </value>
                <value>
                    <fullName>Bid Writing</fullName>
                </value>
                <value>
                    <fullName>Bid Writing Revisit</fullName>
                </value>
                <value>
                    <fullName>Diversity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Review_Date__c</fullName>
        <label>Team Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Under_Review_Date__c</fullName>
        <label>Under Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WRF_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The parent WRF request (Case/ Support)</description>
        <label>WRF Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>WRF Tasks (WRF Request)</relationshipLabel>
        <relationshipName>WRF_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WRF_Stage__c</fullName>
        <description>WRF Task Stage</description>
        <label>WRF Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Disposition_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cross referencing</fullName>
                </value>
                <value>
                    <fullName>DOA</fullName>
                </value>
                <value>
                    <fullName>DOA Rejected/Recalled</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Pending Award</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Pricing Implementation</fullName>
                </value>
                <value>
                    <fullName>Revisit</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WRF_Task_Complete_Count__c</fullName>
        <formula>IF(
      OR(TEXT(Status__c) = &quot;Completed&quot;,  No_Action_Required__c  = True),
      1,
      0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WRF Task Complete Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRF_Task_Complete_Date__c</fullName>
        <label>WRF Task Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WRF_Task_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WRF Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRF_Task_Name__c</fullName>
        <label>WRF Task Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WRF__c</fullName>
        <label>WRF</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>WRF Tasks</relationshipLabel>
        <relationshipName>WRF_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>number_of_Devices__c</fullName>
        <label># of Devices</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WRF Task</label>
    <listViews>
        <fullName>All_Open_WRF_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>WRF__c</columns>
        <columns>Disposition_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Change_Requirements__c</columns>
        <columns>Customer_Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Patricia Hayden</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Open WRF Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <role>ContractDivision</role>
            <role>Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deviated_Cost_Core_Build_completed</fullName>
        <columns>WRF__c</columns>
        <columns>NAME</columns>
        <columns>WRF_Task_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Disposition_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Disposition_Code__c</field>
            <operation>contains</operation>
            <value>Deviated Cost Core Build</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not Started,In Progress,Awaiting Action</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Harikrishnan PV</value>
        </filters>
        <label>Deviated Cost Core Build completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>HCL_Group</group>
            <group>Pricing_Team</group>
            <group>WRF</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HCL_Deviated_Core_build_JA</fullName>
        <columns>WRF__c</columns>
        <columns>NAME</columns>
        <columns>WRF_Task_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Disposition_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Disposition_Code__c</field>
            <operation>contains</operation>
            <value>Deviated Cost Core Build</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>HCL Deviated Core Build</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>HCL_Group</group>
            <group>Pricing_Team</group>
            <group>WRF</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Individual_Que</fullName>
        <columns>Due_Date__c</columns>
        <columns>Account_Name__c</columns>
        <columns>WRF__c</columns>
        <columns>WRF_Task_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Jeanie Garcia</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Individual Que Jeanie</label>
        <language>en_US</language>
    </listViews>
</CustomObject>